--- a/random-quotes-machine/src/App.css
+++ b/random-quotes-machine/src/App.css
@@ -51,7 +51,8 @@ width: 30vw;
   margin: 5px;
   border: none;
   cursor: pointer;
-  padding: 10px 5px 1px 5px;
+  text-decoration: none;
+  padding: 10px 5px 10px 5px;
 
  
 }
